testsuite/tests/safeHaskell/unsafeLibs/T21433.stderr
T21433.hs:6:1: error: [GHC-44360]
    GHC.Internal.Prim.PtrEq: Can't be safely imported!
    The module itself isn't safe.

